# python_bindings

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  maidfile.toml  pyproject.toml
project/: helpers.py  main.py  rust.py  v8_json.py
src/: lib.rs  runtime.rs
src/js/: core.js  helpers.js
tests/: test_eval.js  test_run.js
