[package]
name = "python_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "python_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
deno_core = "0.221.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
deno_ast = { version = "0.29.5", features = ["transpiling"] }
serde_v8 = "0.130.0"

[build-dependencies]
deno_core = "0.221.0"
