[package]
name = "python_bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "python_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.3"
serde_v8 = "0.157.0"
deno_core = "0.248.0"
tokio = { version = "1.36.0", features = ["full"] }
deno_ast = { version = "0.32.1", features = ["transpiling"] }

[dependencies.reqwest]
version = "0.11.24"
default-features = false
features = [
   "blocking", 
   "json", 
   "rustls-tls", 
]

[build-dependencies]
deno_core = "0.248.0"
