[package]
name = "python_bindings"
version = "0.2.0"
edition = "2021"

[lib]
name = "python_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.0"
serde_v8 = "0.228.0"
deno_core = "0.248.0"
tokio = { version = "1.41.1", features = ["full"] }
deno_ast = { version = "0.32.1", features = ["transpiling"] }

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = [
   "blocking", 
   "json", 
   "rustls-tls", 
]

[build-dependencies]
deno_core = "0.248.0"
